cluster/apps/networking/traefik/external/promax/promax1/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: promax1
  namespace: external
subsets:
  - addresses:
      - ip: 192.168.102.201
    ports:
      - name: default
        port: 8006
        protocol: TCP
