cluster/apps/networking/traefik/external/promax/promax1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: promax1
  namespace: external
spec:
  ports:
    - name: default
      port: 8006
      protocol: TCP
      targetPort: 8006
  clusterIP: None
  type: ClusterIP
