cluster/apps/networking/traefik/external/promax/promax1/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: promax1
  namespace: external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${SECRET_PROMAX1_DOMAIN}`)
      services:
        - kind: Service
          name: promax1
          namespace: external
          passHostHeader: true
          port: 8006
          serversTransport: transport-skip-verify
  tls:
    secretName: "${SECRET_PROMAX1_CERTIFICATE}"
