cluster/apps/networking/traefik/external/promax/promax1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: server-plus
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-rate-limit@kubernetescrd
  name: promax1
  namespace: external
spec:
  ingressClassName: traefik
  rules:
    - host: "${SECRET_PROMAX1_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: promax1
                port:
                  number: 8006
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "${SECRET_PROMAX1_DOMAIN}"
      secretName: promax1-tls
