cluster/apps/networking/traefik/external/promax/promax1/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: promax1
  namespace: external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${SECRET_PROMAX1_DOMAIN}`)
      middlewares:
        - name: default-secured-chain@kubernetescrd
      services:
        - kind: Service
          name: promax1
          port: 8006
          serversTransport: skip-verify
  tls:
    secretName: "${SECRET_PROMAX1_CERTIFICATE}"
